--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "react-bootstrap": "^0.32.0",
     "react-dom": "^16.2.0",
     "react-mde": "^2.3.2",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.0",
     "showdown": "^1.8.6"
   },
