--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "font-awesome": "^4.7.0",
     "react": "^16.2.0",
     "react-bootstrap": "^0.32.0",
+    "react-cookies": "^0.1.0",
     "react-dom": "^16.2.0",
     "react-mde": "^2.3.2",
     "react-router-dom": "^4.2.2",
